[gd_scene load_steps=4 format=3 uid="uid://dsqqdrgtku8qi"]

[ext_resource type="Texture2D" uid="uid://b1lo6xewtte0d" path="res://assets/star_indicator.png" id="1_jpuxo"]
[ext_resource type="Script" uid="uid://d08jctlrlfm4b" path="res://scripts/level_choice.gd" id="1_pf0lj"]

[sub_resource type="AtlasTexture" id="AtlasTexture_kti6r"]
atlas = ExtResource("1_jpuxo")
region = Rect2(0, 32, 32, 32)

[node name="level_choice" type="VBoxContainer"]
custom_minimum_size = Vector2(104, 67)
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_pf0lj")

[node name="Button" type="Button" parent="."]
layout_mode = 2
text = "LEVEL 1"

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 4

[node name="star1" type="TextureRect" parent="HBoxContainer"]
layout_mode = 2
texture = SubResource("AtlasTexture_kti6r")

[node name="star2" type="TextureRect" parent="HBoxContainer"]
layout_mode = 2
texture = SubResource("AtlasTexture_kti6r")

[node name="star3" type="TextureRect" parent="HBoxContainer"]
layout_mode = 2
texture = SubResource("AtlasTexture_kti6r")

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
